--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="Balen Coffee"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:/h+XIo0e5C6juCt/HS8xcravWw2M1qotnTcyhAPzMQ4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=balen_coffee
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -56,3 +56,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MIDTRANS_MERCHAT_ID=G084015824
+MIDTRANS_CLIENT_KEY=SB-Mid-client-PdlE65XBdibHXUyy
+MIDTRANS_SERVER_KEY=SB-Mid-server-l9-znikHNmD1fSpe_j5JVN-L
